--- a/views/main.html
+++ b/views/main.html
@@ -1,8 +1,16 @@
 <div class="col" id="description">
+  <p>
+    <strong>Personal paint by number generator</strong><br>
+    With Built-in Color Mixing Recipe
+  </p>
   <p ng-class="{ 'other-step': step != 'load' }">1. Load an image.</p>
   <p ng-class="{ 'other-step': step != 'select' }">2. Click some points on the image to select your color palette.</p>
-  <p ng-class="{ 'other-step': step != 'select' || palette.length < 2 }">3. Click ColorBox and the image will be converted to a paint by number template.</p>
-  <p ng-class="{ 'other-step': step != 'result' }">4. Save/Print the outline, filled image and palette, then print and paint/color.</p>
+  <p ng-class="{ 'other-step': step != 'select' || palette.length < 2 }">
+    3. Click ColorBox and the image will be converted to a paint by number outline + color mixing recipe. View your art and modify before printing.
+  </p>
+  <p ng-class="{ 'other-step': step != 'result' }">4. Print the outline and the Color image with the color mixing recipe.</p>
+  <p ng-class="{ 'other-step': step != 'result' }">5. Use your ColorBox to mix paints and enjoy painting your love ones.</p>
+  <p ng-class="{ 'other-step': step != 'result' }">6. You may also save the files for future work or re use.</p>
   <p ng-class="'other-step'">
     <em>Privacy note: Your image will only be loaded into the browser on your computer. Nothing will be uploaded anywhere.</em>
   </p>
@@ -81,7 +89,7 @@
     <img ng-click="removeColor(color)" ng-show="step == 'select'" src="images/delete.png">
   </div>
 </div>
-
+<!--
 <div class="col" id="color-info" ng-show="step == 'result'">
   <button type="button" class="btn btn-secondary"
           ng-click="showColorInfo()" ng-show="colorInfoVisible == false">show color info</button>
@@ -95,7 +103,7 @@
     <strong>CMYK</strong>({{ color.cmyk.c }}%, {{ color.cmyk.m }}%, {{ color.cmyk.y }}%, {{ color.cmyk.k }}%)
   </p>
 </div>
-
+-->
 <div class="col" id="canvases" ng-hide="step == 'load'">
   <div class="canvas-container" ng-show="step == 'select' || step == 'process'">
     <canvas id="img-canvas" stage></canvas>
@@ -114,7 +122,7 @@
 
 <!-- אזור להצגת תמונות הצבעים שנבחרו עם תפריט יפה בשם "ColorBox מתכוני צבע" -->
 <div class="col" id="selected-colors-images" ng-show="palette.length > 0" style="margin-top:30px;">
-  <h3 style="text-align:center; font-family: Arial, sans-serif; color:#333; margin-bottom:20px;">ColorBox Color Mixing Recipe</h3>
+  <h3 style="text-align:center; font-family: Arial, sans-serif; color:#333; margin-bottom:20px;">Color Mixing Recipe</h3>
   <div ng-repeat="color in palette" class="color-image" style="display: inline-block; margin: 10px; text-align: center;">
     <img ng-src="images/colors/{{ color.label }}.jpg"
          alt="Color #{{ color.label }}"
