main.html עדכון כפתור

--- a/views/main.html
+++ b/views/main.html
@@ -58,7 +58,7 @@
     <!-- קבוצה עבור תמונה מעובדת (filled) -->
     <div class="btn-group" role="group" ng-show="step == 'result'">
       <button type="button" class="btn btn-primary" ng-click="viewFilled()"
-              ng-show="step == 'result'">filled</button>
+              ng-show="step == 'result'">Colored  Image</button>
       <!-- כפתור הדפסה עבור התמונה המעובדת -->
       <button id="print-filled" type="button" class="btn btn-info"
               ng-click="printFilled()">print</button>
